# VIM

./: .djlintrc  .editorconfig  .env  .env.sample  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  developing-guidelines.md  docker-compose.yaml  docker-compose.yml  prettierrc.yml  pyproject.toml
.github/workflows/: cd_stage.yml  frontend_format.yml  python_format.yml
client/: index.html  package-lock.json  package.json  webpack.dev.config.js  webpack.prod.config.js
client/public/: index.html  manifest.json
client/src/: index.js
client/src/pages/: faceted_search.html  landing.html
django/: Dockerfile  manage.py  requirements.txt
django/VIM/: settings.py  wsgi.py
meetings/: notes
nginx/: Dockerfile  VIM.conf  nginx.conf  vim.conf.template
solr/: Dockerfile
solr/cores/: core.properties
solr/cores/conf/: schema.xml  solrconfig.xml
web-app/: Dockerfile  django-startup.sh  install-packages.sh  requirements.txt
web-app/django/VIM/: asgi.py  settings.py  urls.py  views.py
web-app/django/VIM/apps/instruments/: admin.py  apps.py
web-app/django/VIM/apps/main/: apps.py  forms.py  urls.py  views.py
web-app/django/VIM/apps/vim/: apps.py
web-app/django/VIM/static/css/: 404.css  app.css
web-app/django/VIM/static/js/: GoogleTranslate.js  (+1 more)
web-app/django/VIM/templates/: 404.html  base.html
web-app/django/startup_data/: all_instruments_11oct_2024.csv  all_instruments_16aug_2024.csv  vim_instruments_with_images-15sept.csv
web-app/django/static/: app.css
web-app/django/static/css/: app.css
web-app/django/templates/: 404.html  base.html
(+73 files in other folders)
